--- a/bin/index.html
+++ b/bin/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <h1>Calculating the inverse of a random matrix</h1>
-  <div id="button">Recompute</div>
+  <div id="button">Recalculate</div>
   <input id="value" type="number" value="5"/>
 <div id="result"></div>
 </body>
