--- a/index.html
+++ b/index.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr"></html>
+<html lang="en" >
 <head>
-  <title>Linear Algebra</title>
-  <meta charset="utf8"/>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
-<script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.js" integrity="sha384-g7c+Jr9ZivxKLnZTDUhnkOnsh30B4H0rpLUpJ4jAIKs4fnJI+sEnkvrMWph2EDg4" crossorigin="anonymous"></script>
-
-  <link rel="stylesheet" href="linalg.css" type="text/css" />
-  <script src="linalg.js"></script>
-  <script src="main.js"></script>
-<script type="module">
-  main(5);
-  const button = document.getElementById('button');
-  const value = document.getElementById('value');
-  const timeLabel = document.getElementById('time');
-  button.addEventListener('click', async() => {
-    const t1 = Date.now();
-    await main(value.value);
-    const elapsed = Date.now() - t1;
-    timeLabel.innerHTML = `Computed in ${elapsed} milliseconds`;
-  });
-</script>
+  <meta charset="UTF-8">
+  <title>Matrix Algebra</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"> -->
+  <link rel="stylesheet" href="./repl.css">
+  <script src="./repl.js"></script>
+  <script type="module">
+    import setupREPL from './repl.js';
+    setupREPL();
+  </script>
 </head>
 <body>
-  <h1>Calculating the inverse of a random matrix</h1>
-  <div id="button">Recalculate</div>
-  <div><label>Choose dimension:</label><input id="value" type="number" value="5"/></div>
-  <div id="time"></div>
-<div id="result"></div>
+
+<div id="particles-js">
+<div class='repl-wrapper'>
+  <div class='repl-inner'>
+    <div class="outputs">
+    </div>
+    <div class='command'><textarea autofocus class='repl-input' spellcheck=false placeholder="Type command..."></textarea></div>
+  </div>
+</div>
+</div>
+
+<script src='https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js'></script>
 </body>
 </html>
+
+<!-- https://codepen.io/prespik/pen/mYzBaE -->
