UPDATE: Beautify RPEL a tad

--- a/bin/index.html
+++ b/bin/index.html
@@ -15,12 +15,12 @@
 </head>
 <body>
 
-<div id="particles-js">
+<div class="title">Matrix Algebra at your fingertips!</div>
 <div class='repl-wrapper'>
   <div class='repl-inner'>
     <div class="outputs">
     </div>
-    <div class='command'><textarea autofocus class='repl-input' spellcheck=false placeholder="Type command..."></textarea></div>
+    <div class='wrapper'><span class="input-prompt">In[1]: </span><textarea autofocus class='repl-input' spellcheck=false placeholder="Type command..."></textarea></div>
   </div>
 </div>
 </div>
