--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<div class="title">Matrix Algebra at your fingertips!</div>
+<div class="title">Matrix Algebra at your fingertips :)!</div>
 <div class='repl-wrapper'>
   <div class='repl-inner'>
     <div class="outputs">
