FIX: Serve KaTex myself. Small fixes
It is a shame, but am I GDPR compliant if I don't do this?

--- a/bin/index.html
+++ b/bin/index.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <title>Matrix Algebra</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
-  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.js" integrity="sha384-g7c+Jr9ZivxKLnZTDUhnkOnsh30B4H0rpLUpJ4jAIKs4fnJI+sEnkvrMWph2EDg4" crossorigin="anonymous"></script>  
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"> -->
+  <link rel="stylesheet" href="./vendor/katex/katex.min.css">
+  <script defer src="./vendor/katex/katex.min.js"></script>
   <link rel="stylesheet" href="./repl.css">
   <script type="module">
     import setupREPL from './repl.js';
@@ -15,7 +14,7 @@
 </head>
 <body>
 
-<div class="title">Matrix Algebra at your fingertips :)!</div>
+<div class="title">Matrix Algebra at your fingertips!</div>
 <div class='repl-wrapper'>
   <div class='repl-inner'>
     <div class="outputs">
